--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/task_manager?useSSL=false&serverTimezone=Asia/Tokyo
+spring.datasource.url=jdbc:mysql://localhost:3306/task_manager
 spring.datasource.username=root
 spring.datasource.password=root
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Application port,8080 is on use,so this taskManager Project use 8081 port
 server.port=8081
+logging.level.org.springframework.security=DEBUG
